[gd_scene load_steps=11 format=3 uid="uid://di8dtm8dsfxip"]

[ext_resource type="Script" uid="uid://6bt10kolpahr" path="res://HUD/pause/pause_menu/pause_menu.gd" id="1_6wbys"]
[ext_resource type="Texture2D" uid="uid://c0nr8me674n74" path="res://HUD/pause/pause_boarder.png" id="1_n0a0a"]
[ext_resource type="Texture2D" uid="uid://bphdbrj16u2p" path="res://HUD/pause/pause_resume_button_hover.png" id="2_6wbys"]
[ext_resource type="Texture2D" uid="uid://dge3krpg02cr" path="res://HUD/pause/pause_resume_button_unhover.png" id="3_0s7v1"]
[ext_resource type="Texture2D" uid="uid://yf1pjfldowb8" path="res://HUD/pause/pause_mainmenu_button_hover.png" id="3_pglhb"]
[ext_resource type="Texture2D" uid="uid://dlfi3s6ecl7tx" path="res://HUD/pause/pause_mainmenu_button_unhover.png" id="4_wtykx"]
[ext_resource type="Texture2D" uid="uid://byk07cwunvgje" path="res://HUD/pause/pause_restart_button_hover.png" id="7_3ccsn"]
[ext_resource type="Texture2D" uid="uid://58hq3rxf1wai" path="res://HUD/pause/pause_restart_button_unhover.png" id="8_78alw"]
[ext_resource type="Texture2D" uid="uid://bwl3knqrcrkxs" path="res://HUD/pause/music_label.png" id="9_2d2g4"]
[ext_resource type="Texture2D" uid="uid://b0wvepowhpn40" path="res://HUD/pause/sfx_label.png" id="10_68tya"]

[node name="PauseMenu" type="Control"]
z_index = 255
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6wbys")

[node name="background" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.403922)
layout_mode = 0
offset_left = -28.0
offset_top = -21.0
offset_right = 1994.0
offset_bottom = 1127.0

[node name="PauseBoarder" type="Sprite2D" parent="."]
position = Vector2(937, 474)
texture = ExtResource("1_n0a0a")

[node name="MAIN_MENU" type="Button" parent="PauseBoarder"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -233.0
offset_top = 110.0
offset_right = 235.0
offset_bottom = 172.0

[node name="PauseMainmenuButtonHover" type="Sprite2D" parent="PauseBoarder/MAIN_MENU"]
visible = false
position = Vector2(239, 26)
texture = ExtResource("3_pglhb")

[node name="PauseMainmenuButtonUnhover" type="Sprite2D" parent="PauseBoarder/MAIN_MENU"]
position = Vector2(237, 23)
texture = ExtResource("4_wtykx")
metadata/_edit_lock_ = true

[node name="Resume" type="Area2D" parent="PauseBoarder"]
position = Vector2(8, 15)
collision_layer = 2147483648
collision_mask = 2147483648

[node name="PauseResumeButtonHover" type="Sprite2D" parent="PauseBoarder/Resume"]
visible = false
position = Vector2(2, 198)
texture = ExtResource("2_6wbys")
metadata/_edit_lock_ = true

[node name="PauseResumeButtonUnhover" type="Sprite2D" parent="PauseBoarder/Resume"]
position = Vector2(2, 198)
texture = ExtResource("3_0s7v1")
metadata/_edit_lock_ = true

[node name="RESUME" type="Button" parent="PauseBoarder/Resume"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -282.0
offset_top = 143.0
offset_right = 278.0
offset_bottom = 257.0
metadata/_edit_lock_ = true

[node name="RESTART" type="Button" parent="PauseBoarder"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -226.0
offset_top = 31.0
offset_right = 242.0
offset_bottom = 93.0

[node name="PauseMainmenuButtonHover" type="Sprite2D" parent="PauseBoarder/RESTART"]
visible = false
position = Vector2(237, 32)
texture = ExtResource("7_3ccsn")
metadata/_edit_lock_ = true

[node name="PauseMainmenuButtonUnhover" type="Sprite2D" parent="PauseBoarder/RESTART"]
position = Vector2(236, 32)
texture = ExtResource("8_78alw")
metadata/_edit_lock_ = true

[node name="MusicLabel" type="Sprite2D" parent="."]
position = Vector2(764.5, 324)
texture = ExtResource("9_2d2g4")

[node name="music_slider" type="HSlider" parent="MusicLabel"]
offset_left = 69.0
offset_top = -7.0
offset_right = 358.0
offset_bottom = 9.0
value = 100.0
metadata/_edit_use_anchors_ = true

[node name="SfxLabel" type="Sprite2D" parent="."]
position = Vector2(736.5, 385)
texture = ExtResource("10_68tya")

[node name="sfx_slider" type="HSlider" parent="SfxLabel"]
offset_left = 98.0
offset_top = -7.0
offset_right = 387.0
offset_bottom = 9.0
value = 100.0
metadata/_edit_use_anchors_ = true

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="mouse_entered" from="PauseBoarder/MAIN_MENU" to="." method="_on_main_menu_mouse_entered"]
[connection signal="mouse_exited" from="PauseBoarder/MAIN_MENU" to="." method="_on_main_menu_mouse_exited"]
[connection signal="pressed" from="PauseBoarder/MAIN_MENU" to="." method="_on_main_menu_pressed"]
[connection signal="input_event" from="PauseBoarder/Resume" to="." method="_on_resume_input_event"]
[connection signal="mouse_entered" from="PauseBoarder/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="mouse_exited" from="PauseBoarder/Resume" to="." method="_on_resume_mouse_exited"]
[connection signal="mouse_entered" from="PauseBoarder/Resume/RESUME" to="." method="_on_resume_mouse_entered"]
[connection signal="mouse_exited" from="PauseBoarder/Resume/RESUME" to="." method="_on_resume_mouse_exited"]
[connection signal="pressed" from="PauseBoarder/Resume/RESUME" to="." method="_on_resume_click"]
[connection signal="mouse_entered" from="PauseBoarder/RESTART" to="." method="_on_restart_mouse_entered"]
[connection signal="mouse_exited" from="PauseBoarder/RESTART" to="." method="_on_restart_mouse_exited"]
[connection signal="pressed" from="PauseBoarder/RESTART" to="." method="_on_restart_pressed"]
[connection signal="value_changed" from="MusicLabel/music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SfxLabel/sfx_slider" to="." method="_on_sfx_slider_value_changed"]
